mod/assign/styles.css
/* ... */
.path-mod-assign [data-region="grade-panel"] #id_attemptsettings .fcontainer {
    display: table;
    width: 100%;
    padding-left: 5px;
    padding-right: 5px;
    margin-bottom: 10px;
    box-sizing: border-box;
}

.path-mod-assign [data-region="grade-panel"] .mform #id_attemptsettings .fitem {
    display: table-row;
}

.path-mod-assign #page-content [data-region="grade-panel"] .mform:not(.unresponsive) #id_attemptsettings .fitem:last-of-type .fitemtitle,
.path-mod-assign #page-content [data-region="grade-panel"] .mform:not(.unresponsive) #id_attemptsettings .fitem:last-of-type .felement {
    border-bottom: 1px solid #ddd;
}

.path-mod-assign [data-region="grade-panel"] #id_attemptsettings .fitem .fstaticlabel,
.path-mod-assign [data-region="grade-panel"] .mform:not(.unresponsive) #id_attemptsettings .fitem .fitemtitle label {
    font-weight: 400;
}

.path-mod-assign [data-region="grade-panel"] .mform:not(.unresponsive) #id_attemptsettings .fitem .felement select {
    margin-bottom: 0;
}

.path-mod-assign [data-region="grade-panel"] [data-region="attempt-chooser"] {
    margin-bottom: 10px;
    vertical-align: text-bottom;
}

/***** End attempt settings *****/

.path-mod-assign [data-region="grade-actions-panel"] {
    border-top: 1px solid #ddd;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 60px;
}

/*rtl:ignore*/
.path-mod-assign [data-region="grade-actions-panel"] [data-region="grade-actions"] .collapse-buttons {
    position: absolute;
    top: 0;
    left: auto;
    right: 15px;
    margin: 0;
    line-height: 60px;
}

.path-mod-assign [data-region="grade-actions"] {
    padding: 1em;
    text-align: center;
}

.path-mod-assign [data-region="submissions-list"] {
    text-align: inherit;
}

.path-mod-assign [data-region="submissions-list"] label.radio input {
    margin-top: 4px;
    min-width: inherit;
}

.path-mod-assign [data-region="overlay"] {
    display: none;
    z-index: 100;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: auto;
    bottom: 0;
    background-color: #ddd;
    opacity: 0.4;
    padding-top: 4em;
    text-align: center;
}
/* ... */

